[gd_scene load_steps=22 format=2]

[ext_resource path="res://behaviors/SpineAnimator.gd" type="Script" id=2]
[ext_resource path="res://behaviors/Avoidance.gd" type="Script" id=3]
[ext_resource path="res://behaviors/NoiseWander.gd" type="Script" id=4]
[ext_resource path="res://behaviors/PlayerSteering.gd" type="Script" id=5]
[ext_resource path="res://behaviors/Rotate.gd" type="Script" id=6]
[ext_resource path="res://behaviors/CreatureController.gd" type="Script" id=7]
[ext_resource path="res://behaviors/Constrain.gd" type="Script" id=8]
[ext_resource path="res://behaviors/Tank Material.tres" type="Material" id=9]
[ext_resource path="res://behaviors/Harmonic.gd" type="Script" id=10]
[ext_resource path="res://behaviors/Boid.gd" type="Script" id=11]
[ext_resource path="res://behaviors/root.gd" type="Script" id=14]
[ext_resource path="res://behaviors/Dodecahedron.tscn" type="PackedScene" id=19]

[sub_resource type="PrismMesh" id=5]

[sub_resource type="BoxShape" id=9]

[sub_resource type="CubeMesh" id=1]

[sub_resource type="BoxShape" id=13]

[sub_resource type="BoxShape" id=12]

[sub_resource type="BoxShape" id=11]

[sub_resource type="PrismMesh" id=8]

[sub_resource type="BoxShape" id=10]

[sub_resource type="SphereShape" id=17]
radius = 3.0

[node name="root" type="Spatial"]
script = ExtResource( 14 )

[node name="creature" type="Spatial" parent="."]

[node name="Controller" type="Node" parent="creature"]
script = ExtResource( 7 )

[node name="spineanimator" type="Node" parent="creature"]
script = ExtResource( 2 )
bonePaths = [ NodePath("../boid"), NodePath("../body1"), NodePath("../body2"), NodePath("../body3"), NodePath("../tail") ]

[node name="boid" type="KinematicBody" parent="creature"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 12.5154 )
script = ExtResource( 11 )
max_force = 80
damping = 0.3

[node name="MeshInstance" type="MeshInstance" parent="creature/boid"]
transform = Transform( 1, 0, 0, 0, -8.74228e-08, -1, 0, 2, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 5 )
skeleton = NodePath("../../..")
material/0 = ExtResource( 9 )

[node name="CollisionShape" type="CollisionShape" parent="creature/boid"]
shape = SubResource( 9 )

[node name="Avoidance" type="Node" parent="creature/boid"]
script = ExtResource( 3 )
weight = 10.0
feeler_length = 15

[node name="Harmonic" type="Node" parent="creature/boid"]
script = ExtResource( 10 )
weight = 3.0
frequency = 0.5
distance = 10
axis = 1

[node name="Constrain" type="Node" parent="creature/boid"]
script = ExtResource( 8 )
weight = 0.1

[node name="NoiseWander" type="Node" parent="creature/boid"]
script = ExtResource( 4 )
draw_gizmos = false
radius = 50.0
amplitude = 90
distance = 100

[node name="UserSteering" type="Node" parent="creature/boid"]
script = ExtResource( 5 )
weight = 15.0
draw_gizmos = false
enabled = false

[node name="body1" type="KinematicBody" parent="creature"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 9 )

[node name="MeshInstance4" type="MeshInstance" parent="creature/body1"]
mesh = SubResource( 1 )
skeleton = NodePath("../../..")
material/0 = ExtResource( 9 )

[node name="CollisionShape" type="CollisionShape" parent="creature/body1"]
shape = SubResource( 13 )

[node name="body2" type="KinematicBody" parent="creature"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 6 )

[node name="MeshInstance3" type="MeshInstance" parent="creature/body2"]
mesh = SubResource( 1 )
skeleton = NodePath("../../..")
material/0 = ExtResource( 9 )

[node name="CollisionShape" type="CollisionShape" parent="creature/body2"]
shape = SubResource( 12 )

[node name="body3" type="KinematicBody" parent="creature"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3 )

[node name="MeshInstance2" type="MeshInstance" parent="creature/body3"]
mesh = SubResource( 1 )
skeleton = NodePath("../../..")
material/0 = ExtResource( 9 )

[node name="CollisionShape" type="CollisionShape" parent="creature/body3"]
shape = SubResource( 11 )

[node name="tail" type="KinematicBody" parent="creature"]

[node name="MeshInstance" type="MeshInstance" parent="creature/tail"]
transform = Transform( 1, 0, 0, 0, -8.74228e-08, 1, 0, -2, -4.37114e-08, 0, 0, -0.504121 )
mesh = SubResource( 8 )
skeleton = NodePath("")
material/0 = ExtResource( 9 )

[node name="CollisionShape" type="CollisionShape" parent="creature/tail"]
shape = SubResource( 10 )
disabled = true

[node name="Pod" type="Area" parent="creature/tail"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 8, -2 )

[node name="Dodecahedron" parent="creature/tail/Pod" instance=ExtResource( 19 )]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, 0, 0.210667, 0 )
script = ExtResource( 6 )
speed = 1.0

[node name="CollisionShape" type="CollisionShape" parent="creature/tail/Pod"]
shape = SubResource( 17 )

[connection signal="body_entered" from="creature/tail/Pod" to="creature/Controller" method="_on_Pod_body_entered"]
